welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:3: error: illegal start of simple pattern
 var int aDiff = Math.abs(a - 10);
               ^close10:3: error: '=' expected but ';' found.
 var int aDiff = Math.abs(a - 10);
                                 ^close10:4: error: illegal start of simple pattern
 var int bDiff = Math.abs(b - 10);
               ^close10:4: error: '=' expected but ';' found.
 var int bDiff = Math.abs(b - 10);
                                 ^